# POSER

./: .gitignore  README.md  compute_auc_grad_product.py  dependence.md  download.py  pyproject.toml  run_experiments.py
poser/: __init__.py
src/api/: optimizers.py
src/detection_strategies/: dependence_detector.py  grad_product.ipynb  grad_product_detector.py  path_integral_detector.py  path_integral_utils.py  run_detectors.py  strategy_4.ipynb  tyche_pair_detector.py
src/detection_strategies/path_integral/: __init__.py  detector.py  evaluator.py  model_trainer.py  path_optimizer.py  utils.py  visualizer.py
src/genies_benchmark.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/tests/: test_detectors.py  test_optimizers.py  test_path_integral.py
