[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poser"
version = "0.1.0"
description = "POSER project"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "absl-py==2.0.0",
    "accelerate==0.24.1",
    "aiohttp==3.8.6",
    "annotated-types==0.6.0",
    "beautifulsoup4==4.12.2",
    "bitsandbytes==0.41.2.post2",
    "datasets==2.14.6",
    "deepspeed==0.12.2",
    "einops==0.7.0",
    "huggingface-hub==0.17.3",
    "matplotlib==3.8.1",
    "nltk==3.8.1",
    "numpy==1.26.1",
    "openai==1.2.3",
    "pandas==2.1.3",
    "peft==0.6.1",
    "Pillow==10.1.0",
    "pydantic==2.4.2",
    "PyYAML==6.0.1",
    "rouge-score==0.1.2",
    "scikit-learn==1.3.2",
    "scipy==1.11.3",
    "seaborn==0.13.0",
    "sentencepiece==0.1.99",
    "tokenizers==0.14.1",
    "tqdm==4.66.1",
    "trl==0.7.4",
    "tyro==0.5.12",
    "wandb==0.16.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8",
    "pytest",
    "pytest-cov",
]

jupyter = [
    "ipykernel==6.26.0",
    "ipython==8.17.2",
    "ipywidgets==8.1.1",
    "jupyter==1.0.0",
    "jupyter-console==6.6.3",
    "jupyter-events==0.9.0",
    "jupyter-lsp==2.2.0",
    "jupyter_client==8.6.0",
    "jupyter_core==5.5.0",
    "jupyter_server==2.10.0",
    "jupyterlab==4.0.8",
    "notebook==7.0.6",
]


[tool.setuptools]
packages = ["poser"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.uv]
exclude = ["torch", "transformers"] 